# hgps

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  config_parsing_helpers.h  test.cpp  vcpkg.json
src/: CMakeLists.txt
src/hgps/: CMakeLists.txt  analysis_definition.h  analysis_module.cpp  analysis_module.h  api.h  baseline_scenario.h  converter.cpp  converter.h  data_series.cpp  data_series.h  default_cancer_model.cpp  default_disease_model.cpp  default_disease_model.h  demographic.cpp  demographic.h  disease.h  disease_definition.h  disease_table.h  dummy_model.cpp  dummy_model.h  dynamic_hierarchical_linear_model.cpp  dynamic_hierarchical_linear_model.h  error_message.h  event_bus.cpp  event_bus.h  event_message.h  event_subscriber.h  fiscal_scenario.cpp  fiscal_scenario.h  food_labelling_scenario.h  gender_table.h  gender_value.h  info_message.h  interfaces.h  kevin_hall_model.cpp  kevin_hall_model.h  life_table.h  lms_definition.h  lms_model.h  map2d.h  (+41 more)
src/hgps/analysis/: analysis_definition.h  analysis_income.cpp  analysis_income.h  analysis_series.cpp  analysis_series.h  analysis_summary.cpp  analysis_summary.h  analysis_tracking.cpp  analysis_tracking.h
src/hgps/api/: analysis_definition.h  interfaces.h  lms_definition.h
src/hgps/data/: converter.cpp  converter.h  data_series.cpp  data_series.h  demographic.cpp  demographic.h  gender_table.h  gender_value.h  mapping.cpp  mapping.h  model_input.cpp  model_input.h  nutrients.cpp  nutrients.h  person.cpp  person.h  pif_data_forward.h  population.h  repository.cpp  repository.h  riskfactor.cpp  riskfactor.h  weight_category.h
src/hgps/disease/: disease.cpp  disease.h  disease_registry.h  disease_table.cpp  disease_table.h  life_table.cpp  life_table.h  relative_risk.cpp  relative_risk.h
src/hgps/events/: channel.h  error_message.cpp  error_message.h  event_aggregator.h  event_bus.cpp  event_bus.h  event_message.h  event_subscriber.cpp  event_subscriber.h  event_visitor.h  individual_tracking_message.cpp  individual_tracking_message.h  info_message.cpp  info_message.h  result_message.cpp  result_message.h  runner_message.cpp  runner_message.h  sync_message.h
src/hgps/models/: default_cancer_model.cpp  default_cancer_model.h  default_disease_model.cpp  default_disease_model.h  dynamic_hierarchical_linear_model.cpp  dynamic_hierarchical_linear_model.h  kevin_hall_model.cpp  kevin_hall_model.h  lms_model.cpp  lms_model.h  risk_factor_adjustable_model.cpp  risk_factor_adjustable_model.h  risk_factor_model.h  ses_noise_module.cpp  ses_noise_module.h  static_hierarchical_linear_model.cpp  static_hierarchical_linear_model.h  static_linear_model.cpp  static_linear_model.h  univariate_visitor.cpp  univariate_visitor.h  weight_model.cpp  weight_model.h
src/hgps/scenarios/: baseline_scenario.cpp  baseline_scenario.h  fiscal_scenario.cpp  fiscal_scenario.h  food_labelling_scenario.cpp  food_labelling_scenario.h  intervention_scenario.h  marketing_dynamic_scenario.cpp  marketing_dynamic_scenario.h  marketing_scenario.cpp  marketing_scenario.h  physical_activity_scenario.cpp  physical_activity_scenario.h  scenario.h  simple_policy_scenario.cpp  simple_policy_scenario.h
src/hgps/simulation/: analysis_module.cpp  analysis_module.h  model_result.cpp  model_result.h  module_factory.cpp  module_factory.h  modulefactory.h  runner.cpp  runner.h  runtime_context.cpp  runtime_context.h  runtime_metric.cpp  runtime_metric.h  simulation.cpp  simulation.h  simulation_module.cpp  simulation_module.h
src/hgps/types/: disease_definition.h  interfaces.h  lms_definition.h
src/hgps/utils/: finally.h  map2d.h  monotonic_vector.h  mt_random.cpp  mt_random.h  mtrandom.h  program_dirs.cpp  program_dirs.h  random_algorithm.cpp  random_algorithm.h  settings.h  (+5 more)
src/hgps_console/: CMakeLists.txt  command_options.cpp  command_options.h  event_monitor.cpp  event_monitor.h  individual_id_tracking_writer.cpp  individual_id_tracking_writer.h  model_info.h  program.cpp  resource.h  result_file_writer.cpp  result_file_writer.h  result_writer.h  versioninfo.rc
src/hgps_core/: CMakeLists.txt  analysis.h  api.h  array2d.h  column.h  column_iterator.h  column_numeric.h  country.h  datastore.h  diagnostics.cpp  diagnostics.h  disease.h  exception.h  forward_type.h  indicator.h  interval.h  math_util.h  univariate_summary.h
src/hgps_input/: CMakeLists.txt  api.h  config.cpp  config.h  config_parsing.cpp  config_path_parsing.cpp  config_path_parsing.h  config_section_parsing.cpp  configuration.h  configuration_parsing.h  configuration_parsing_helpers.h  csv_parser.cpp  csv_parser.h  csvparser.cpp  csvparser.h  data_manager.cpp  data_manager.h  data_manager_analysis.cpp  data_manager_csv.cpp  data_manager_demographic.cpp  data_manager_disease.cpp  data_manager_paths.cpp  data_manager_pif.cpp  data_source.cpp  data_source.h  datamanager.cpp  datamanager.h  download_file.cpp  ebhlm_model_parser.cpp  ebhlm_model_parser.h  hlm_model_parser.cpp  hlm_model_parser.h  json_access.h  json_parser.cpp  json_parser.h  jsonparser.cpp  jsonsparser.h  kevinhall_model_parser.cpp  kevinhall_model_parser.h  model_parser.cpp  (+23 more)
src/hgps_tests/: AgeGenderTable.Test.cpp  CMakeLists.txt  Channel.Test.cpp  ConfigSchemaExpanded.Test.cpp  Configuration.Test.cpp  ConfigurationPIF.Test.cpp  Core.Array2DTest.cpp  Core.Test.cpp  Core.UnivariateSummary.Test.cpp  CountryModule.h  DataManagerPIF.Test.cpp  DiseaseModelPIF.Test.cpp  DiseaseModels.Test.cpp  EventAggregator.Test.cpp  HierarchicalMapping.Test.cpp  JsonParser.Test.cpp  LoadNutrientTable.cpp  Map2d.Test.cpp  Population.Test.cpp  Repository.Test.cpp  RepositoryPIF.Test.cpp  RiskFactorData.h  Scenario.Test.cpp  Simulation.Test.cpp  WeightModel.Test.cpp  config_pif_test.cpp  config_schema_expanded_test.cpp  config_test.cpp  core_math_helper_test.cpp  country_module.h  data_manager_pif_test.cpp  datastore_test.cpp  identifier_test.cpp  interval_test.cpp  json_parser_test.cpp  life_table_test.cpp  pif_data_test.cpp  pif_integration_test.cpp  relative_risk_lookup_test.cpp  repo_test.cpp  (+5 more)
(+580 files in other folders)
